--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "2.0.5"
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.4.0-beta.4",
+    "react-scripts": "2.0.5",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.82.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +28,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "^5.7.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
