--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "prop-types": "^15.6.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.4.0-beta.4",
     "react-scripts": "2.0.5",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
     "validator": "^10.8.0"
@@ -30,12 +33,14 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "eslint": "^5.6.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "redux-devtools-extension": "^2.13.5"
   }
 }
