--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "rndmovie",
   "version": "0.1.0",
   "private": true,
+  "engines":{
+  	"node":"10.12.0",
+  	"npm":"6.4.1"
+  }
   "dependencies": {
     "axios": "^0.18.0",
     "google-maps-react": "^2.0.2",
